--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,13 +4,13 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "xlizard"
-version = "1.1.4"
+version = "1.1.5"
 description = "Extended Lizard with additional static code analysis features"
 readme = "README.md"
 authors = [
     {name = "Xor1no"}
 ]
-license = {text = "Proprietary"}
+license = {text = "MIT"}
 dependencies = [
     "jinja2>=3.1.3",
     "tqdm>=4.67.1",
